# hermitclaw

./: .gitignore  .gitmodules  CLAUDE.md  README.md  REVIEW.md  config.yaml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  GameWorld.tsx  sprites.ts  tilemap.ts  world.ts
hermitclaw/: brain.py  config.py  fold_client.py  main.py  memory.py  prompts.py  provider.py  server.py  tools.py
myxo/: brain.py  config.py  fold_client.py  identity.py  main.py  memory.py  prompts.py  provider.py  server.py  summarizer.py
scripts/: generate_assets.py  sync-bbs.sh  update-fold-submodule.sh
